Fix vertical alignment of form-checkbox inputs

--- a/h/static/styles/forms.scss
+++ b/h/static/styles/forms.scss
@@ -93,7 +93,7 @@
 }
 
 .form-checkbox-item {
-  padding-left: 20px;
+  padding-left: 22px;
 
   .form-checkbox, [type=checkbox], [type=radio] {
     float: left;
